# qtTcpServerClient

TcpClient/: CMakeLists.txt  main.cpp  tcpsockethandler.cpp  tcpsockethandler.h
TcpServer/: CMakeLists.txt  connectionworker.cpp  connectionworker.h  main.cpp  tcpserver.cpp  tcpserver.h  tcpserverhandler.cpp  tcpserverhandler.h
